💄 fix: Removing scrollbar icons show in firefox

--- a/src/components/Organisms/Main/style.module.css
+++ b/src/components/Organisms/Main/style.module.css
@@ -81,7 +81,7 @@
   padding: 24px;
 
   overflow-x: hidden;
-  overflow-y: scroll;
+  overflow-y: auto;
   margin: 0px;
 }
 
